# litestar-book

./: .gitignore  README.md  alembic.ini  dishka_exapmle.py  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_03_26_1636-1481f515c9bf_init.py  2025_04_08_1052-8f55b23c6b3f_add_user_role_and_is_activate_status.py
src/: app.py  config.py  lists_of_addictions.py  logger_config.py  main.py  settings.py
src/infrastructure/: database.py  di.py  guards.py  middleware.py  provide.py
src/infrastructure/db/: database.py  models.py
src/modules/books/: model.py  protocols.py  provide.py  repository.py  router.py  schema.py  service.py
src/modules/users/: auth.py  model.py  protocol.py  repository.py  role.py  router.py  schema.py  service.py
